--- a/static/fonts/font-family.css
+++ b/static/fonts/font-family.css
@@ -14,3 +14,8 @@
     src: url(/fonts/SourceSans3-Medium.ttf) format('truetype');
     font-weight: 700;
 }
+
+@font-face {
+  font-family: 'SourceCodePro';
+  src: url(/fonts/SourceCodePro-Regular.ttf) format('truetype');
+}
