--- a/themes/PaperModX/layouts/partials/header.html
+++ b/themes/PaperModX/layouts/partials/header.html
@@ -154,6 +154,10 @@
             <a
               href="https://hachyderm.io/@markphilpot"><span>{{ partial "svg" (dict "icon" "SimpleIconsMastodon" "class" "icon-sm" "style" "color: #6363f5") }}</span></a>
           </li>
+          <li>
+            <a
+              href="https://bsky.app/profile/markphilpot.bsky.social"><span>{{ partial "svg" (dict "icon" "SimpleIconsBluesky" "class" "icon-sm" "style" "color: #3c83f6") }}</span></a>
+          </li>
 {{/*          <li>*/}}
 {{/*            <a*/}}
 {{/*              href="https://micro.markphilpot.com"><span>{{ partial "svg" (dict "icon" "SimpleIconsMicrodotblog" "class" "icon-sm" "style" "color: #f6c443") }}</span></a>*/}}
