Inline support for micro posts
Using no title as the differentiator.

--- a/themes/PaperModX/assets/css/extended/blank.css
+++ b/themes/PaperModX/assets/css/extended/blank.css
@@ -124,3 +124,15 @@ p.imgCaption {
     height: 18px;
     margin-bottom: -2px;
   }
+
+  :root {
+    --essay: rgb(245, 239, 255);
+  }
+
+  .dark {
+    --essay: rgb(68, 23, 82);
+  }
+
+  .post-entry.essay {
+    background-color: var(--essay);
+  }
