--- a/themes/PaperModX/layouts/_default/_markup/render-image.html
+++ b/themes/PaperModX/layouts/_default/_markup/render-image.html
@@ -15,34 +15,44 @@
 {{- $hint := "photo" -}}
 {{- $filter := "box" -}}
 {{- $imgClass := "animate-fade" -}}
+{{- $url := urls.Parse .Destination -}}
 
 {{- if .Page.Resources.GetMatch $src -}}
 	{{ with .Page.Resources.GetMatch $src }}
-		{{- $divClass := print "imgPicContainer imgB-" $imgBd5 "-" $holder -}}
-		{{- $imgRsc := . -}}
-		{{- $actualImg := $imgRsc.Process (print "resize 640x jpg " $filter) -}}
-		<div class="{{ $divClass }}" {{ with $imgRsc.Width }}{{- if ge 752 . -}}style="width: {{ $imgRsc.Width }}px;"{{- end }}{{ end }} data-pagefind-ignore {{ with $.Title}} title="{{ . }}" {{ end }}>
-			<picture data-pagefind-ignore>
-				<source type="image/webp" srcset="
-				{{- with $respSizes -}}
-					{{- range $i, $e := . -}}
-						{{- if ge $imgRsc.Width . -}}
-							{{- if $i }}, {{ end -}}{{- ($imgRsc.Process (print "resize " . "x webp " $hint " " $filter) ).RelPermalink }} {{ . }}w
-						{{- end -}}
-					{{- end -}}
-				{{- end -}}" sizes="{{ $dataSzes }}" />
-				<source type="image/jpeg" srcset="
-				{{- with $respSizes -}}
-					{{- range $i, $e := . -}}
-						{{- if ge $imgRsc.Width . -}}
-							{{- if $i }}, {{ end -}}{{- ($imgRsc.Process (print "resize " . "x jpg " $filter) ).RelPermalink }} {{ . }}w
-						{{- end -}}
-					{{- end -}}
-				{{- end -}}" sizes="{{ $dataSzes }}" />
-				<img style="height: auto;" class="{{ $imgClass }}" src="{{ $actualImg.RelPermalink }}" width="{{ $imgRsc.Width }}" height="{{ $imgRsc.Height }}" alt="{{ $.Text }}" {{ with $.Title}} title="{{ . }}" {{ end }} loading="lazy" data-pagefind-ignore />
-			</picture>
-		</div>
+    {{ if eq .MediaType.SubType "gif" }}
+      <img loading="lazy" src="{{ .RelPermalink }}" type="" alt="{{ $.Text }}" {{ with $.Title}} title="{{ . }}" {{ end }} />
+    {{ else }}
+
+      {{- $divClass := print "imgPicContainer imgB-" $imgBd5 "-" $holder -}}
+      {{- $imgRsc := . -}}
+      {{- $actualImg := $imgRsc.Process (print "resize 640x jpg " $filter) -}}
+      <div class="{{ $divClass }}" {{ with $imgRsc.Width }}{{- if ge 752 . -}}style="width: {{ $imgRsc.Width }}px;"{{- end }}{{ end }} data-pagefind-ignore {{ with $.Title}} title="{{ . }}" {{ end }}>
+        <picture data-pagefind-ignore>
+          <source type="image/webp" srcset="
+          {{- with $respSizes -}}
+            {{- range $i, $e := . -}}
+              {{- if ge $imgRsc.Width . -}}
+                {{- if $i }}, {{ end -}}{{- ($imgRsc.Process (print "resize " . "x webp " $hint " " $filter) ).RelPermalink }} {{ . }}w
+              {{- end -}}
+            {{- end -}}
+          {{- end -}}" sizes="{{ $dataSzes }}" />
+          <source type="image/jpeg" srcset="
+          {{- with $respSizes -}}
+            {{- range $i, $e := . -}}
+              {{- if ge $imgRsc.Width . -}}
+                {{- if $i }}, {{ end -}}{{- ($imgRsc.Process (print "resize " . "x jpg " $filter) ).RelPermalink }} {{ . }}w
+              {{- end -}}
+            {{- end -}}
+          {{- end -}}" sizes="{{ $dataSzes }}" />
+          <img style="height: auto;" class="{{ $imgClass }}" src="{{ $actualImg.RelPermalink }}" width="{{ $imgRsc.Width }}" height="{{ $imgRsc.Height }}" alt="{{ $.Text }}" {{ with $.Title}} title="{{ . }}" {{ end }} loading="lazy" data-pagefind-ignore />
+        </picture>
+      </div>
+
+    {{ end }}
 	{{- end -}}
+{{- else if $url.Scheme -}}
+  {{/* third party image */}}
+  <img loading="lazy" src="{{ .Destination | safeURL }}" alt="{{ $.Text }}" {{ with $.Title}} title="{{ . }}" {{ end }} />
 {{- else -}}
 	<p class="ctr legal"><em>Image unavailable.</em></p>
 {{- end -}}
