Script improvements, mastodon verification

--- a/themes/PaperModX/layouts/partials/header.html
+++ b/themes/PaperModX/layouts/partials/header.html
@@ -143,28 +143,24 @@
       <div class="navPlaces">
         <ul id="externalMenu" class="menu">
           <li>
-            <a
-              href="https://aside.markphilpot.com"><span>{{ partial "svg" (dict "icon" "SimpleIconsApplepodcasts" "class" "icon-sm" "style" "color: #309aea") }}</span></a>
+            <a href="https://aside.markphilpot.com"><span>{{ partial "svg" (dict "icon" "SimpleIconsApplepodcasts" "class" "icon-sm" "style" "color: #309aea") }}</span></a>
           </li>
 {{/*          <li>*/}}
 {{/*            <a*/}}
 {{/*              href="https://portfolio.markphilpot.com"><span>{{ partial "svg" (dict "icon" "SimpleIconsInstagram" "class" "icon-sm" "style" "color: #af44bd") }}</span></a>*/}}
 {{/*          </li>*/}}
           <li>
-            <a
-              href="https://hachyderm.io/@markphilpot"><span>{{ partial "svg" (dict "icon" "SimpleIconsMastodon" "class" "icon-sm" "style" "color: #6363f5") }}</span></a>
+            <a rel="me" href="https://hachyderm.io/@markphilpot"><span>{{ partial "svg" (dict "icon" "SimpleIconsMastodon" "class" "icon-sm" "style" "color: #6363f5") }}</span></a>
           </li>
           <li>
-            <a
-              href="https://bsky.app/profile/markphilpot.bsky.social"><span>{{ partial "svg" (dict "icon" "SimpleIconsBluesky" "class" "icon-sm" "style" "color: #3c83f6") }}</span></a>
+            <a href="https://bsky.app/profile/markphilpot.bsky.social"><span>{{ partial "svg" (dict "icon" "SimpleIconsBluesky" "class" "icon-sm" "style" "color: #3c83f6") }}</span></a>
           </li>
 {{/*          <li>*/}}
 {{/*            <a*/}}
 {{/*              href="https://micro.markphilpot.com"><span>{{ partial "svg" (dict "icon" "SimpleIconsMicrodotblog" "class" "icon-sm" "style" "color: #f6c443") }}</span></a>*/}}
 {{/*          </li>*/}}
           <li>
-            <a
-              href="/index.xml"><span>{{ partial "svg" (dict "icon" "SimpleIconsRss" "class" "icon-sm" "style" "color: #ee802f") }}</span></a>
+            <a href="/index.xml"><span>{{ partial "svg" (dict "icon" "SimpleIconsRss" "class" "icon-sm" "style" "color: #ee802f") }}</span></a>
           </li>
         </ul>
       </div>
