--- a/themes/PaperModX/layouts/partials/extend_head.html
+++ b/themes/PaperModX/layouts/partials/extend_head.html
@@ -3,6 +3,7 @@
 {{- /*     Can be overwritten by partial with the same name in the global layouts. */ -}}
 {{- /* Head custom content area end */ -}}
 <link rel="stylesheet" href="/fonts/font-family.css">
+<meta name="fediverse:creator" content="@markphilpot@hachyderm.io">
 {{/*  <link rel="stylesheet" href="/fontawesome/css/fontawesome.min.css">
 <link rel="stylesheet" href="/fontawesome/css/brands.min.css">
 <link rel="stylesheet" href="/fontawesome/css/solid.min.css">
