--- a/themes/PaperModX/layouts/partials/templates/head_imgs_css.html
+++ b/themes/PaperModX/layouts/partials/templates/head_imgs_css.html
@@ -15,10 +15,10 @@
 		{{- $LQIP_img := $src.Process "resize 20x jpg q20" -}}
 		{{- $LQIP_b64 := $LQIP_img.Content | base64Encode -}}
 		{{- $BkgdStyleLQIP := print "background: url(data:image/jpeg;base64," $LQIP_b64 ")" $BkgdStyleEnd }}
-		.imgB-{{ $imgBd5 }}-GIP {
+		.imgB-{{ $imgBd5 }}-GIP img {
 			{{ $BkgdStyleGIP | safeCSS }}
 		}
-		.imgB-{{ $imgBd5 }}-LQIP {
+		.imgB-{{ $imgBd5 }}-LQIP img {
 			{{ $BkgdStyleLQIP | safeCSS }}
 		}
 	{{- end }}
