--- a/themes/PaperModX/layouts/_default/list.html
+++ b/themes/PaperModX/layouts/_default/list.html
@@ -64,76 +64,79 @@
     {{- end }}
 
     <article class="{{ $class }} {{ if .Title }}essay{{ end }}">
-      {{- $isHidden := (site.Params.cover.hidden | default site.Params.cover.hiddenInList) }}
-      {{- partial "cover.html" (dict "cxt" . "IsHome" true "isHidden" $isHidden) }}
+      <div style="position: relative">
+        {{- $isHidden := (site.Params.cover.hidden | default site.Params.cover.hiddenInList) }}
+        {{- partial "cover.html" (dict "cxt" . "IsHome" true "isHidden" $isHidden) }}
 
-      {{ if or .Title .Draft }}
-        <header class="entry-header">
-          <h2>
-            {{- .Title }}
-            {{- if .Draft }}<sup><span class="entry-isdraft">&nbsp;&nbsp;[Draft]</span></sup>{{- end }}
-            {{- if .Weight }}<sup><span class="entry-isdraft">&nbsp;&nbsp;[Pinned]</span></sup>{{- end }}
-          </h2>
-        </header>
-      {{ end }}
-      {{- if (.Param "featuredImage") }}
-        {{ $fe := .Param "featuredImage" }}
-
-        {{ with .Resources.Get $fe }}
-          {{- $respSizes := slice "400" "700" -}}
-          {{- $imgRsc := . -}}
-          {{- $hint := "photo" -}}
-          {{- $filter := "box" -}}
-          {{- $dataSzes := "(min-width: 1024px) 100vw, 50vw" -}}
-          {{- $actualImg := $imgRsc.Process (print "resize 640x jpg " $filter) -}}
-          <div class="entry-featuredImage">
-            <picture data-pagefind-ignore>
-              <source type="image/webp" srcset="
-          {{- with $respSizes -}}
-            {{- range $i, $e := . -}}
-              {{- if ge $imgRsc.Width . -}}
-                {{- if $i }}, {{ end -}}{{- ($imgRsc.Process (print "resize " . "x webp q80 " $hint " " $filter) ).RelPermalink }} {{ . }}w
-              {{- end -}}
-            {{- end -}}
-          {{- end -}}" sizes="{{ $dataSzes }}"/>
-              <source type="image/jpeg" srcset="
-          {{- with $respSizes -}}
-            {{- range $i, $e := . -}}
-              {{- if ge $imgRsc.Width . -}}
-                {{- if $i }}, {{ end -}}{{- ($imgRsc.Process (print "resize " . "x jpg q80 " $filter) ).RelPermalink }} {{ . }}w
-              {{- end -}}
-            {{- end -}}
-          {{- end -}}" sizes="{{ $dataSzes }}"/>
-              <img style="width: 100%;" class="entry-featuredImage animate-fade" loading="lazy"
-                   src="{{ $actualImg.RelPermalink }}" data-pagefind-ignore/>
-            </picture>
-          </div>
+        {{ if or .Title .Draft }}
+          <header class="entry-header">
+            <h2>
+              {{- .Title }}
+              {{- if .Draft }}<sup><span class="entry-isdraft">&nbsp;&nbsp;[Draft]</span></sup>{{- end }}
+              {{- if .Weight }}<sup><span class="entry-isdraft">&nbsp;&nbsp;[Pinned]</span></sup>{{- end }}
+            </h2>
+          </header>
         {{ end }}
-      {{ end }}
-      {{- if (ne (.Param "hideSummary") true) }}
+        {{- if (.Param "featuredImage") }}
+          {{ $fe := .Param "featuredImage" }}
+
+          {{ with .Resources.Get $fe }}
+            {{- $respSizes := slice "400" "700" -}}
+            {{- $imgRsc := . -}}
+            {{- $hint := "photo" -}}
+            {{- $filter := "box" -}}
+            {{- $dataSzes := "(min-width: 1024px) 100vw, 50vw" -}}
+            {{- $actualImg := $imgRsc.Process (print "resize 640x jpg " $filter) -}}
+            <div class="entry-featuredImage">
+              <picture data-pagefind-ignore>
+                <source type="image/webp" srcset="
+            {{- with $respSizes -}}
+              {{- range $i, $e := . -}}
+                {{- if ge $imgRsc.Width . -}}
+                  {{- if $i }}, {{ end -}}{{- ($imgRsc.Process (print "resize " . "x webp q80 " $hint " " $filter) ).RelPermalink }} {{ . }}w
+                {{- end -}}
+              {{- end -}}
+            {{- end -}}" sizes="{{ $dataSzes }}"/>
+                <source type="image/jpeg" srcset="
+            {{- with $respSizes -}}
+              {{- range $i, $e := . -}}
+                {{- if ge $imgRsc.Width . -}}
+                  {{- if $i }}, {{ end -}}{{- ($imgRsc.Process (print "resize " . "x jpg q80 " $filter) ).RelPermalink }} {{ . }}w
+                {{- end -}}
+              {{- end -}}
+            {{- end -}}" sizes="{{ $dataSzes }}"/>
+                <img style="width: 100%;" class="entry-featuredImage animate-fade" loading="lazy"
+                     src="{{ $actualImg.RelPermalink }}" data-pagefind-ignore/>
+              </picture>
+            </div>
+          {{ end }}
+        {{ end }}
+        {{- if (ne (.Param "hideSummary") true) }}
+          {{ if .Title }}
+            <section class="entry-content">
+              {{ if .Description }}
+                <p>{{ .Description | plainify | htmlUnescape }}</p>
+              {{ else }}
+                <p>{{ .Summary | plainify | htmlUnescape }}{{ if .Truncated }}...{{ end }}</p>
+              {{ end }}
+            </section>
+          {{ else }}
+            <section class="post-content">
+              {{ .Content }}
+            </section>
+          {{ end }}
+        {{- end }}
         {{ if .Title }}
-          <section class="entry-content">
-            {{ if .Description }}
-              <p>{{ .Description | plainify | htmlUnescape }}</p>
-            {{ else }}
-              <p>{{ .Summary | plainify | htmlUnescape }}{{ if .Truncated }}...{{ end }}</p>
-            {{ end }}
-          </section>
-        {{ else }}
-          <section class="post-content">
-            {{ .Content }}
-          </section>
+          <a class="entry-link" aria-label="post link to {{ .Title | plainify }}" href="{{ .Permalink }}"></a>
         {{ end }}
-      {{- end }}
+      </div>
       {{- if not (.Param "hideMeta") }}
         <footer class="entry-footer">
           {{- partial "post_meta.html" . -}}
         </footer>
       {{- end }}
-      <a class="entry-link" aria-label="post link to {{ .Title | plainify }}" href="{{ .Permalink }}"></a>
     </article>
   {{- end }}
-
   {{- if gt $paginator.TotalPages 1 }}
     <footer class="page-footer">
       <nav class="pagination">
