--- a/themes/PaperModX/assets/css/extended/blank.css
+++ b/themes/PaperModX/assets/css/extended/blank.css
@@ -5,26 +5,26 @@ Read https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#bundling-custom-cs
 */
 
 .entry-featuredImage {
-    border-radius: var(--radius);
-    margin-top: 0.8rem;
-  }
-  
-  .head-featuredImage,
-  .post-featuredImage {
-    width: 100vw;
-    height: 250px;
-    background-position: 50%;
-    background-size: cover;
+  border-radius: var(--radius);
+  margin-top: 0.8rem;
+}
+
+.head-featuredImage,
+.post-featuredImage {
+  width: 100vw;
+  height: 250px;
+  background-position: 50%;
+  background-size: cover;
+}
+
+@keyframes fadeIn {
+  0% {
+      opacity: 0
   }
 
-  @keyframes fadeIn {
-    0% {
-        opacity: 0
-    }
-
-    to {
-        opacity: 1
-    }
+  to {
+      opacity: 1
+  }
 }
 
 .animate-fade {
@@ -37,102 +37,106 @@ p.imgCaption {
   font-style: italic;
 }
   
-  img[title="hidden"], p.imgCaption[title="hidden"], p.imgCaption[title="ew1920"], div[title="hidden"] {
-    display: none !important;
-  }
-  
-  div[title="ew1920"] {
-    max-width: 1920px !important;
-    margin-left: calc((1920px - 720px) / -2) !important;
-    margin-right: calc((1920px - 720px) / -2) !important;
-  }
+img[title="hidden"], p.imgCaption[title="hidden"], p.imgCaption[title="ew1920"], div[title="hidden"] {
+  display: none !important;
+}
 
-  .ewDiv {
+div[title="ew1920"] {
+  max-width: 1920px !important;
+  margin-left: calc((1920px - 720px) / -2) !important;
+  margin-right: calc((1920px - 720px) / -2) !important;
+}
+
+.ewDiv {
+  max-width: 100vw !important;
+  margin-left: calc((100vw - 720px) / -2) !important;
+  margin-right: calc((100vw - 720px) / -2) !important;
+}
+
+.wDiv {
+  max-width: 80vw !important;
+  margin-left: calc((80vw - 720px) / -2) !important;
+  margin-right: calc((80vw - 720px) / -2) !important;
+}
+
+@media (max-width: 1920px) {
+  div[title="ew1920"] {
     max-width: 100vw !important;
     margin-left: calc((100vw - 720px) / -2) !important;
     margin-right: calc((100vw - 720px) / -2) !important;
   }
+}
 
+@media (max-width: 752px) {
+  div[title="ew1920"] {
+    max-width: 100vw !important;
+    margin-left: -14px !important;
+    margin-right: -14px !important;
+  }
+  .ewDiv {
+    max-width: 100vw !important;
+    margin-left: -14px !important;
+    margin-right: -14px !important;
+  }
   .wDiv {
-    max-width: 80vw !important;
-    margin-left: calc((80vw - 720px) / -2) !important;
-    margin-right: calc((80vw - 720px) / -2) !important;
+    max-width: 100vw !important;
+    margin-left: -14px !important;
+    margin-right: -14px !important;
   }
-
-  @media (max-width: 1920px) {
-    div[title="ew1920"] {
-      max-width: 100vw !important;
-      margin-left: calc((100vw - 720px) / -2) !important;
-      margin-right: calc((100vw - 720px) / -2) !important;
-    }
-  }
-
-  @media (max-width: 752px) {
-    div[title="ew1920"] {
-      max-width: 100vw !important;
-      margin-left: -14px !important;
-      margin-right: -14px !important;
-    }
-    .ewDiv {
-      max-width: 100vw !important;
-      margin-left: -14px !important;
-      margin-right: -14px !important;
-    }
-    .wDiv {
-      max-width: 100vw !important;
-      margin-left: -14px !important;
-      margin-right: -14px !important;
-    }
-  }
+}
 
   
   
-  .post-content table {
-    display: table;
-    width: 100%;
-    text-align: center !important;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  .post-content table th {
-    text-align: center !important;
-    border-bottom: none !important;
-  }
-  
-  .post-content .imgPicContainer {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  body {
-    font-family: 'SourceSans3', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
-  }
-  
-  .menu a:hover span {
-    box-shadow: 0 1px;
-  }
+.post-content table {
+  display: table;
+  width: 100%;
+  text-align: center !important;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-  .icon-sm {
-    width: 16px;
-    height: 16px;
-    margin-bottom: -2px;
-  }
-  .icon-md {
-    width: 18px;
-    height: 18px;
-    margin-bottom: -2px;
-  }
+.post-content table th {
+  text-align: center !important;
+  border-bottom: none !important;
+}
 
-  :root {
-    --essay: rgb(245, 239, 255);
-  }
+.post-content .imgPicContainer {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-  .dark {
-    --essay: rgb(68, 23, 82);
-  }
+body {
+  font-family: 'SourceSans3', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+}
 
-  .post-entry.essay {
-    background-color: var(--essay);
-  }
+.menu a:hover span {
+  box-shadow: 0 1px;
+}
+
+.icon-sm {
+  width: 16px;
+  height: 16px;
+  margin-bottom: -2px;
+}
+.icon-md {
+  width: 18px;
+  height: 18px;
+  margin-bottom: -2px;
+}
+
+:root {
+  --essay: rgb(245, 239, 255);
+}
+
+.dark {
+  --essay: rgb(68, 23, 82);
+}
+
+.post-entry.essay {
+  background-color: var(--essay);
+}
+
+.plyr--audio {
+  border-radius: var(--radius);
+}
