--- a/themes/PaperModX/layouts/shortcodes/video.html
+++ b/themes/PaperModX/layouts/shortcodes/video.html
@@ -1,6 +1,6 @@
 <figure>
 <video class="player" preload="{{ .Get "preload" }}" style="--plyr-color-main: #6549c0;">
   <source src="{{ .Get "src" }}" type="{{ .Get "type" }}">
-  There should have been a video here but your browser does not seem to support it.
+  <!-- There should have been a video here but your browser does not seem to support it. -->
 </video>
 </figure>
