--- a/themes/PaperModX/assets/css/common/404.css
+++ b/themes/PaperModX/assets/css/common/404.css
@@ -6,6 +6,6 @@
     align-items: center;
     justify-content: center;
     height: 80%;
-    font-size: 160px;
+    font-size: 6rem;
     font-weight: 700;
 }
