--- a/themes/PaperModX/assets/css/common/header.css
+++ b/themes/PaperModX/assets/css/common/header.css
@@ -53,7 +53,7 @@
 }
 
 .logo a {
-    font-size: 36px;
+    font-size: 2rem;
     font-weight: 700;
 }
 
@@ -73,7 +73,7 @@
 }
 
 button#theme-toggle {
-    font-size: 26px;
+    font-size: 1.8rem;
     margin: auto 4px;
 }
 
@@ -99,7 +99,7 @@ body:not(.dark) #sun {
 }
 
 .menu a {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
     color: var(--secondary);
     display: inline-block;
@@ -142,7 +142,7 @@ body:not(.dark) #sun {
 
 .lang-switch a {
     margin: auto 3px;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
 }
 
