--- a/themes/PaperModX/assets/css/extended/essays.scss
+++ b/themes/PaperModX/assets/css/extended/essays.scss
@@ -18,7 +18,7 @@ body.type-essays {
   .post-entry {
     /* same as .post-header h2 */
     .entry-title {
-      font-size: 24px;
+      font-size: 1.5rem;
       line-height: 1.3;
       margin-bottom: calc(var(--content-gap) / 2);
       a {
