--- a/themes/PaperModX/assets/css/extended/newsletter.scss
+++ b/themes/PaperModX/assets/css/extended/newsletter.scss
@@ -16,7 +16,7 @@ body.type-newsletter {
   --signature-bg-dimmer: rgba(203, 58, 87, 0.084);
   --main-border: 5px solid var(--signature);
   --icon-length: 50px;
-  --icon-font-size: 32px;
+  --icon-font-size: 2rem;
 
   // override theme-vars
   --link-hover-color: var(--signature);
@@ -26,7 +26,7 @@ body.type-newsletter {
 
   @media screen and (max-width: $small) {
     --icon-length: 40px;
-    --icon-font-size: 24px;
+    --icon-font-size: 1.5rem;
   }
 
   /* a links in section/archives page content and regular page post-content */
@@ -254,7 +254,7 @@ body.type-newsletter.kind-page {
     display: flex;
     background-color: var(--signature-bg-dim);
     transition: var(--link-transition);
-    font-size: 32px;
+    font-size: 2rem;
     margin-bottom: var(--content-gap);
     line-height: var(--icon-length);
     box-shadow: none; // reset
@@ -300,7 +300,7 @@ body.type-newsletter.kind-page {
   }
   @media screen and (max-width: $small) {
     .newsletter-brand {
-      font-size: 24px;
+      font-size: 1.5rem;
       .remark {
         margin-left: auto;
         padding-right: var(--padding);
@@ -312,7 +312,7 @@ body.type-newsletter.kind-page {
   }
 
   .post-title {
-    font-size: 36px;
+    font-size: 2rem;
   }
   .post-footer {
     border-bottom-color: var(--signature);
