--- a/themes/PaperModX/assets/css/extended/blank.css
+++ b/themes/PaperModX/assets/css/extended/blank.css
@@ -107,7 +107,7 @@ div[title="ew1920"] {
 }
 
 body {
-  font-family: 'SourceSans3', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+  font-family: 'NebulaSans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
 }
 
 .menu a:hover span {
