--- a/themes/blowfish/layouts/partials/article-link/card.html
+++ b/themes/blowfish/layouts/partials/article-link/card.html
@@ -11,8 +11,8 @@
       <meta property="og:image" content="{{ . | absURL }}" />{{ end -}}
       {{- else -}}
       {{- $images := $.Resources.ByType "image" -}}
-      {{- $featured := $images.GetMatch "*feature*" -}}
-      {{- if not $featured }}{{ $featured = $images.GetMatch "{*cover*,*thumbnail*}" }}{{ end -}}
+      {{- $featured := $images.GetMatch "**/*feature*" -}}
+      {{- if not $featured }}{{ $featured = $images.GetMatch "**/*{cover,thumbnail,hero}*" }}{{ end -}}
       {{ if and .Params.featureimage (not $featured) }}
       {{- $url:= .Params.featureimage -}}
       {{ $featured = resources.GetRemote $url }}
