--- a/themes/blowfish/layouts/partials/term-link/card.html
+++ b/themes/blowfish/layouts/partials/term-link/card.html
@@ -9,8 +9,8 @@
     <meta property="og:image" content="{{ . | absURL }}" />{{ end -}}
     {{- else -}}
     {{- $images := .Page.Resources.ByType "image" -}}
-    {{- $featured := $images.GetMatch "*feature*" -}}
-    {{- if not $featured }}{{ $featured = $images.GetMatch "{*cover*,*thumbnail*}" }}{{ end -}}
+    {{- $featured := $images.GetMatch "**/*feature*" -}}
+    {{- if not $featured }}{{ $featured = $images.GetMatch "**/*{cover,thumbnail,hero}*" }}{{ end -}}
     {{- with $featured -}}
     {{ if $disableImageOptimization }}
         {{ with . }}
